--- a/src/theme/theme-base.css
+++ b/src/theme/theme-base.css
@@ -1,9 +1,19 @@
-html, body {
+:root {
+  --bg: transparent;
+}
+
+@media (prefers-color-scheme: dark) {
+  html {
+    background: black;
+  }
+}
+
+body {
   background: var(--bg);
   color: var(--fg) !important;
 }
 
-a, .label-text, .post-time {
+a, .label-text, .post-time, textarea, select {
   color: var(--fg) !important;
 }
 
@@ -16,18 +26,32 @@ button {
   color: var(--bg-color);
 }
 
-button:disabled {
-  color: var(--bg-color);
-  background: var(--fg);
-  backdrop-filter: brightness(50%);
+*:disabled {
+  filter: brightness(70%);
 }
 
-.profilePanel, .post-header-wrap, #posts, .container-right, .profile-wrap, .bottom-menus, #taiitsuDialog, #taiitsuDialogInner, .post-wrap, .tp-container {
+button, select {
+  cursor: pointer;
+}
+
+button:disabled, select:disabled {
+  cursor: not-allowed;
+}
+
+input[type="color" i] {
+  width: 2rem;
+  height: 2rem;
+  inline-size: 2rem;
+  block-size: 2rem;
+  padding: 0px;
+}
+
+.profilePanel, .post-header-wrap, .container-right, .profile-wrap, .bottom-menus, #taiitsuDialog, #taiitsuDialogInner, #posts, #followUsers, .tp-container {
   background: var(--container-bg);
   color: var(--container-fg);
 }
 
-.profile-wrap, #posts, .container-right, .tp-container {
+.profile-wrap, #posts, #followUsers, #notices, .container-right, .tp-container {
   border-radius: 4px;
   border: solid 1px var(--border-color);
   overflow: hidden;
@@ -99,11 +123,15 @@ button:hover.post-button-off * {
   justify-content: flex-end;
   border-radius: 0px;
   border: none;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
 #posts > .post-wrap {
   border-bottom: solid 1px var(--border-color);
+}
+
+#posts > .post-wrap:last-child {
+  border-bottom: none;
 }
 
 .post-wrap > .posts-main {
@@ -118,6 +146,7 @@ button:hover.post-button-off * {
 
 .post-main {
   padding: 0px;
+  width: 100%;
 }
 
 .post-image {
