--- a/themes/my-style.css
+++ b/themes/my-style.css
@@ -4,34 +4,28 @@
   --bg: var(--bg-img) var(--bg-color);
   --fg: black;
   --fg-hover: rgba(0, 0, 0, 0.9);
-  --sub-fg: #888;
+  --sub-fg: rgba(0,0,0, 0.7);
 
-  --container-bg: rgba(var(--primary-color-red), var(--primary-color-blue), var(--primary-color-green), 0.5);
+  --container-bg: rgba(var(--primary-color-red), var(--primary-color-blue), var(--primary-color-green), 0.25);
   --container-fg: var(--fg);
 
-  --border-color: rgba(var(--primary-color-red), var(--primary-color-blue), var(--primary-color-green), 0.8);
+  --border-color: rgba(var(--primary-color-red), var(--primary-color-blue), var(--primary-color-green), 1);
 
   --item-bg: black;
   --item-fg: white;
 
-  --button-on: #f92672;
+  --button-like-on: #f92672;
+  --button-rt-on: #00db80;
   --button-off: var(--item-bg);
 
   --verify-badge-bg: #1d86ff;
   --verify-badge-fg: white;
 }
 
-.container-right, .profile-wrap, #posts, .container-left > .tp-container, .post-header-wrap, #taiitsuDialogInner {
+.container-right, .profile-wrap, #posts, .tp-container, .post-header-wrap, #taiitsuDialogInner {
   backdrop-filter: blur(1rem);
 }
 
-.tp-container {
-  background: none;
-}
-
-.container-left > .tp-container {
-  background: var(--container-bg);
-}
 
 body {
   background-color: rgba(var(--primary-color-red), var(--primary-color-blue), var(--primary-color-green), 0.25);
