--- a/themes/theme-base.css
+++ b/themes/theme-base.css
@@ -178,7 +178,7 @@ button.post-button-off {
 }
 
 .post-image {
-  position: relative;
+  position: initial;
 }
 
 .post-user-badge, .profile-user-badge {
