--- a/themes/normal-dark.css
+++ b/themes/normal-dark.css
@@ -9,7 +9,7 @@
   --container-bg: rgba(35, 40, 46, 0.8);
   --container-fg: var(--fg);
 
-  --border-color: #rgba(255, 255, 255, 0.8);
+  --border-color: rgba(255, 255, 255, 0.5);
 
   --item-bg: white;
   --item-fg: #23282e;
